# cv-algorithms

./: .gitignore  CMakeLists.txt  compile_commands.json
src/: bilinear_interpolation.cc  canny.py  laplacian.py
